--- a/docker/Docker_Compose.yaml
+++ b/docker/Docker_Compose.yaml
@@ -50,6 +50,8 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
+  # Note: you'll need to create your own .env file and change all the standard passwords used for setup.. 
+  # the only thing I changed as to add the .env file and add the image name of my extended image 
   image: ${AIRFLOW_IMAGE_NAME:-airflowhome:latest}
   build: .
   env_file: 
