--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -31,3 +31,4 @@ apache-airflow-providers-openfaas
 apache-airflow-providers-influxdb
 apache-airflow-providers-discord
 apache-airflow-providers-apache-kafka
+python-kasa==0.5.4
