--- a/IoT/kasa_devices/Dockerfile
+++ b/IoT/kasa_devices/Dockerfile
@@ -1,7 +1,9 @@
-FROM python:3.9.10-slim-buster
+FROM python:3.11-slim as build
 
 COPY requirements.txt /
 RUN pip install -r /requirements.txt
 
-COPY kasa_power_plug.py .
+COPY main.py .
 COPY kasa_utilities.py .
+
+CMD python3 main.py
