Refactoring, updated scripts for Orange Pi 3B

--- a/IoT/air_quality/Dockerfile
+++ b/IoT/air_quality/Dockerfile
@@ -1,9 +1,6 @@
 FROM python:3.11-slim as build
 
-COPY requirements.txt /
+COPY image_files/ .
 RUN pip install -r /requirements.txt
-
-COPY air_quality.py .
-COPY main.py .
 
 CMD python3 main.py 
