Refactoring for Air Quality &  Orange Pi 3B

--- a/IoT/kasa_devices/Dockerfile
+++ b/IoT/kasa_devices/Dockerfile
@@ -1,9 +1,7 @@
 FROM python:3.11-slim as build
 
-COPY requirements.txt /
-RUN pip install -r /requirements.txt
+COPY requirements.txt main.py kasa_utilities.py /
 
-COPY main.py .
-COPY kasa_utilities.py .
+RUN pip install -r /requirements.txt
 
 CMD python3 main.py
