Small Refactoring of weather DAGs

--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -32,3 +32,5 @@ apache-airflow-providers-influxdb
 apache-airflow-providers-discord
 apache-airflow-providers-apache-kafka
 python-kasa==0.5.4
+finnhub-python
+slack_sdk
