--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ ConfigUpdater==3.1.1
 connexion==2.14.2
 cron-descriptor==1.4.0
 croniter==2.0.1
-cryptography==41.0.5
+cryptography
 debugpy 
 decorator
 defusedxml
