--- a/K3s-Kubernetes/zigbee2mqtt_deployment/values.yaml
+++ b/K3s-Kubernetes/zigbee2mqtt_deployment/values.yaml
@@ -103,3 +103,38 @@ spec:
         - name: zigbee2mqtt-config
           configMap:
             name: zigbee2mqtt-config
+---
+apiVersion: v1
+kind: Service
+metadata:
+  creationTimestamp: null
+  labels:
+    app: zigbee2mqtt
+  name: zigbee2mqtt
+  namespace: iot-devices
+spec:
+  ports:
+    - name: zigbee2mqtt
+      port: 8080
+      targetPort: http
+      protocol: TCP
+  selector:
+    app: zigbee2mqtt
+  type:
+    ClusterIP
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  creationTimestamp: null
+  labels:
+    app: zigbee2mqtt
+  name: zigbee2mqtt-data
+  namespace: iot-devices
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 100Mi
+status: {}
