updated to reflect setting base MQTT topic in config map

--- a/K3s-Kubernetes/zigbee2mqtt_deployment/values.yaml
+++ b/K3s-Kubernetes/zigbee2mqtt_deployment/values.yaml
@@ -35,6 +35,12 @@ spec:
               value: America/Los_Angeles
             - name: "ZIGBEE2MQTT_DATA"
               value: "/data"
+            - name: ZIGBEE2MQTT_CONFIG_BASE_TOPIC
+              valueFrom:
+                configMapKeyRef:
+                  key: ZIGBEE2MQTT_BASE_TOPIC
+                  name: mqtt-data
+                  optional: false
             - name: ZIGBEE2MQTT_CONFIG_MQTT_SERVER
               valueFrom:
                 configMapKeyRef:
