--- a/etl/asana/containerized/Dockerfile
+++ b/etl/asana/containerized/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.11-slim as build
 
-COPY requirements.txt main.py asana_utilities.py postgres_client.py /
+COPY requirements.txt main.py logging_util.py asana_utilities.py postgres_client.py /
 
 RUN pip install -r /requirements.txt
 
