updated Dockerfile for weather ETL container

--- a/etl_pipelines/openweather_current/Dockerfile
+++ b/etl_pipelines/openweather_current/Dockerfile
@@ -7,6 +7,6 @@ WORKDIR /etl
 
 COPY ./openweather_current ./
 
-RUN pip install -r /etl/requirements.txt
+RUN pip install -r /openweather_library/requirements.txt
 
 CMD python3 /etl/main.py
