updated Docker image, using more shared files

--- a/etl_pipelines/alpha_vantage_bond_load/Dockerfile
+++ b/etl_pipelines/alpha_vantage_bond_load/Dockerfile
@@ -7,6 +7,6 @@ WORKDIR /etl
 
 COPY ./alpha_vantage_bond_load ./
 
-RUN pip install -r /etl/requirements.txt
+RUN pip install -r /alpha_vantage_library/requirements.txt
 
 CMD python3 /etl/main.py
