updating env vars for pipeline failure alerts

--- a/argo_workflow_manifests/etl_pipelines/openweather/open_weather_air.yaml
+++ b/argo_workflow_manifests/etl_pipelines/openweather/open_weather_air.yaml
@@ -33,6 +33,11 @@ spec:
             secretKeyRef:
               key: PROD_INFLUX_KEY
               name: influxdb-secret
+        - name: ALERT_WEBHOOK
+          valueFrom:
+            secretKeyRef:
+              key: WEBHOOK_ETL_ALERTS
+              name: slack-webhook-pipeline-failures
         - name: OPENWEATHER_KEY
           valueFrom:
             secretKeyRef:
