--- a/argo_workflow_manifests/etl_pipelines/alpha_vantage_tbills/alpha_vantage_2yr_tbill_data.yaml
+++ b/argo_workflow_manifests/etl_pipelines/alpha_vantage_tbills/alpha_vantage_2yr_tbill_data.yaml
@@ -5,7 +5,7 @@ metadata:
   name: alpha-vantage-2yr-tbill
   namespace: etl-pipelines
 spec:
-  schedule: "*/15 * * * *"
+  schedule: "0 */12 * * *"
   timezone: "America/Los_Angeles"
   startingDeadlineSeconds: 0
   concurrencyPolicy: Replace
