--- a/hardware_telemetry/intel_x86_devices/Dockerfile
+++ b/hardware_telemetry/intel_x86_devices/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11-slim as build
 
 RUN apt-get update -y && apt-get install -y gcc  python3-dev
 
-COPY requirements.txt minis12_data.py main.py /
+COPY requirements.txt intel_x86.py main.py /
 RUN pip install -r /requirements.txt
 
 CMD python3 main.py 
