small hook file edit

--- a/etl_pipelines/openweather_current/hooks/build
+++ b/etl_pipelines/openweather_current/hooks/build
@@ -2,4 +2,4 @@
 
 docker buildx build --platform linux/arm64/v8,linux/amd64 \
 --tag  markhamlee/openweather_current:latest \ 
--f openweather_current/Dockerfile
+-f openweather_current/Dockerfile .
