--- a/etl_pipelines/openweather_current/hooks/build
+++ b/etl_pipelines/openweather_current/hooks/build
@@ -1,5 +1,3 @@
 #!/bin/bash
 
-docker buildx build --platform linux/arm64/v8,linux/amd64 \
---tag  markhamlee/openweather_current:latest \ 
--f openweather_current/Dockerfile .
+docker buildx build --platform linux/arm64/v8,linux/amd64 --tag  markhamlee/openweather_current:latest --file openweather_current/Dockerfile .
