--- a/etl_pipelines/openweather_current/hooks/build
+++ b/etl_pipelines/openweather_current/hooks/build
@@ -1,5 +1,4 @@
 #!/bin/bash
 
-cd ../..
 
-docker buildx build --platform linux/arm64/v8,linux/amd64 --tag  markhamlee/openweather_current:latest --file ../etl_pipelines/openweather_current/Dockerfile .
+(cd ../.. docker buildx build --platform linux/arm64/v8,linux/amd64 --tag  markhamlee/openweather_current:latest --file ../etl_pipelines/openweather_current/Dockerfile .)
