hook file testing

--- a/etl_pipelines/openweather_current/hooks/build
+++ b/etl_pipelines/openweather_current/hooks/build
@@ -1,4 +1,4 @@
 #!/bin/bash
 
 
-docker buildx build  --platform linux/arm64/v8,linux/amd64 --tag  markhamlee/openweather_current:latest --file /Dockerfile .
+docker buildx build  --platform linux/arm64/v8,linux/amd64 --tag  markhamlee/openweather_current:latest  .
