--- a/.github/workflows/openweather_current_image.yaml
+++ b/.github/workflows/openweather_current_image.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   docker:
-    runs-on: push
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
