--- a/.github/workflows/openweather_current_image.yaml
+++ b/.github/workflows/openweather_current_image.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - "main"
+    paths:
+      - "etl_pipelines/etl_library/*"
+      - "etl_pipelines/openweather_current/*"
 
 jobs:
   docker:
