updating github actions

--- a/.github/workflows/intel_x86_monitoring.yaml
+++ b/.github/workflows/intel_x86_monitoring.yaml
@@ -1,11 +1,11 @@
-name: IoT_DHT22_Build
+name: intelx86_monitoring
 
 on:
   push:
     branches:
       - "main"
     paths:
-      - "IoT/dht22/container/*"
+      - "hardware_telemetry/intel_x86_devices/*"
 
 jobs:
   docker:
@@ -25,8 +25,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./IoT/dht22/container
-          file: ./IoT/dht22/container/Dockerfile
-          platforms: linux/arm64
+          context: ./hardware_telemetry/intel_x86_devices/
+          file: .
+          platforms: linux/amd64
           push: true
-          tags: markhamlee/dht22_monitoring:latest
+          tags: markhamlee/intelx86_monitoring:latest
