--- a/.github/workflows/libre_lepotato_monitoring_image.yaml
+++ b/.github/workflows/libre_lepotato_monitoring_image.yaml
@@ -29,4 +29,4 @@ jobs:
           file: .
           platforms: linux/arm64
           push: true
-          tags: markhamlee/dht22_sensor:latest
+          tags: markhamlee/lepotatomonitor:latest
