--- a/.github/workflows/intel_x86_monitoring.yaml
+++ b/.github/workflows/intel_x86_monitoring.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./hardware_telemetry/intel_x86_devices/
-          file: .
+          file: ./hardware_telemetry/intel_x86_devices/Dockerfile
           platforms: linux/amd64
           push: true
           tags: markhamlee/intelx86_monitoring:latest
