--- a/.github/workflows/libre_lepotato_monitoring_image.yaml
+++ b/.github/workflows/libre_lepotato_monitoring_image.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./hardware_telemetry/libre_lepotato/
-          file: ../hardware_telemetry/libre_lepotato/Dockerfile
+          file: ./hardware_telemetry/libre_lepotato/Dockerfile
           platforms: linux/arm64
           push: true
           tags: markhamlee/lepotatomonitor:latest
