updating container base

--- a/IoT/dht22/container/Dockerfile
+++ b/IoT/dht22/container/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:alpine as build
+FROM python:3.12.2-slim as build
 
 RUN apt-get update -y && apt-get install -y gcc python3-dev libgpiod2
 
