Updating requirements.txt, encountering issues with pyarrow wheels for arm64 containers

--- a/etl_pipelines/asana/requirements.txt
+++ b/etl_pipelines/asana/requirements.txt
@@ -1,6 +1,5 @@
 jedi
 lxml
-paho-mqtt==1.6.1
 prometheus-client 
 python-dateutil 
 pyzmq
@@ -20,4 +19,4 @@ joblib
 Werkzeug
 slack_sdk
 psycopg2-binary
-pyarrow==14.0.2
+pyarrow
