--- a/etl_pipelines/rpi_locator/requirements.txt
+++ b/etl_pipelines/rpi_locator/requirements.txt
@@ -1,8 +1,3 @@
-pandas
-feedparser
-datetime
-requests
-influxdb-client==1.38.0
 jedi
 lxml
 prometheus-client 
@@ -16,9 +11,12 @@ urllib3==2.0.7
 wcwidth 
 webencodings==0.5.1
 websocket-client
+pandas
 numpy
 SQLAlchemy
+asana==3.2.2
 joblib
 Werkzeug
 slack_sdk
 psycopg2-binary
+feedparser
