--- a/etl_pipelines_node_js/openweather_current/package.json
+++ b/etl_pipelines_node_js/openweather_current/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Markham Lee",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
     "axios": "^1.6.7"
