--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,6 @@ cython_debug/
 IoT/kasa_devices/config/kasa_config.json 
 IoT/kasa_devices/config/kasa_secrets.json 
 IoT/kasa_devices/*.log
+
+etl_pipelines_nodejs/openweather_current/.dockerignore
+etl_pipelines_nodejs/openweather_current/node_modules
