--- a/etl_pipelines_nodejs/openweather_current/Dockerfile
+++ b/etl_pipelines_nodejs/openweather_current/Dockerfile
@@ -1,10 +1,12 @@
-FROM node:10-alpine
+# FROM node:10-alpine
+
+FROM node:19-alpine3.16
 
 RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 
 WORKDIR /home/node/app
 
-COPY package*.json ./
+COPY package.json ./
 
 USER node
 
