--- a/.gitignore
+++ b/.gitignore
@@ -158,5 +158,9 @@ IoT/kasa_devices/*.log
 
 etl_pipelines_nodejs/openweather_current/.dockerignore
 etl_pipelines_nodejs/openweather_current/node_modules/*
+etl_pipelines_nodejs/openweather_current/node_modules
 etl_pipelines_nodejs/openweather_current_ts/node_modules
 etl_pipelines_nodejs/openweather_current_ts/node_modules/*
+etl_pipelines_nodejs/finnhub_node/node_modules/*
+etl_pipelines_nodejs/finnhub_node/node_modules
+
