updated workflow file

--- a/.github/workflows/openweather_airpollution_nodejs_image.yaml
+++ b/.github/workflows/openweather_airpollution_nodejs_image.yaml
@@ -5,6 +5,8 @@ on:
       - "main"
     paths:
       - "etl_pipelines_nodejs/openweather_airquality_nodejs/*"
+      - "etl_pipelines_nodejs/openweather_airquality_nodejs/src/*"
+      - "etl_pipelines_nodejs/openweather_airquality_nodejs/utils/*"
 
 jobs:
   docker:
