small tweak, adding more paths

--- a/.github/workflows/finnhub_image_nodejs.yaml
+++ b/.github/workflows/finnhub_image_nodejs.yaml
@@ -1,10 +1,11 @@
 name: finnhub_stockprice_nodejs_typescript_container_build
-
 on:
   push:
     branches:
       - "main"
     paths:
+      - "etl_pipelines_nodejs/finnhub_node/src/*"
+      - "etl_pipelines_nodejs/finnhub_node/utils/*"
       - "etl_pipelines_nodejs/finnhub_node/*"
 
 jobs:
