--- a/etl_pipelines_nodejs/finnhub_node/Dockerfile
+++ b/etl_pipelines_nodejs/finnhub_node/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:18-alpine3.18
 
+# adding comment to test Github actions workflow
+
 RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 
 WORKDIR /home/node/app
