--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,6 @@ etl_pipelines_nodejs/openweather_airquality_nodejs/node_modules
 etl_pipelines_nodejs/openweather_airquality_nodejs/.eslintrc.yml
 etl_pipelines_nodejs/github_node/node_modules/*
 etl_pipelines_nodejs/github_node/node_modules
+etl_pipelines_nodejs/finnhub_nodejs/node_modules/*
+etl_pipelines_nodejs/finnhub_nodejs/node_modules
+etl_pipelines_nodejs/finnhub_nodejs/.eslintrc.yml
