updating Finnhub ETL actions file to pull from common/private Finnhub library

--- a/.github/workflows/finnhub_image.yaml
+++ b/.github/workflows/finnhub_image.yaml
@@ -6,6 +6,7 @@ on:
       - "main"
     paths:
       - "etl_pipelines/etl_library/*"
+      - "etl_pipelines/finnhub_libraries/*"
       - "etl_pipelines/finnhub/*"
 
 jobs:
