--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,4 @@ etl_pipelines_nodejs/github_node/node_modules
 etl_pipelines_nodejs/finnhub_nodejs/node_modules/*
 etl_pipelines_nodejs/finnhub_nodejs/node_modules
 etl_pipelines_nodejs/finnhub_nodejs/.eslintrc.yml
+etl_pipelines_nodejs/openweather_utilities/*
