--- a/.github/workflows/github_dependabot_alerts.yaml
+++ b/.github/workflows/github_dependabot_alerts.yaml
@@ -7,6 +7,7 @@ on:
     paths:
       - "etl_pipelines/etl_library/*"
       - "etl_pipelines/github_dependabot/*"
+      - "etl_pipelines/github_library/*"
 
 jobs:
   docker:
