updating workflow to pull from shared library

--- a/.github/workflows/github_actions_image_build.yaml
+++ b/.github/workflows/github_actions_image_build.yaml
@@ -6,6 +6,7 @@ on:
       - "main"
     paths:
       - "etl_pipelines/etl_library/*"
+      - "etl_pipelines/github_library/*"
       - "etl_pipelines/github_actions_data/*"
 
 jobs:
