--- a/.github/workflows/finnhub_nodejs_etl_image_build.yaml
+++ b/.github/workflows/finnhub_nodejs_etl_image_build.yaml
@@ -8,6 +8,7 @@ on:
       - "etl_pipelines_nodejs/finnhub_nodejs/*"
       - "etl_pipelines_nodejs/finnhub_nodejs/src/*"
       - "etl_pipelines_nodejs/finnhub_nodejs/utils/*"
+      - "etl_pipelines_nodejs/common/*"
 
 jobs:
   docker:
@@ -27,7 +28,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./etl_pipelines_nodejs/finnhub_nodejs/
+          context: ./etl_pipelines_nodejs/
           file: ./etl_pipelines_nodejs/finnhub_nodejs/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
