updating gh workflow config to use common node.js etl libraries

--- a/.github/workflows/openweather_airpollution_nodejs_image.yaml
+++ b/.github/workflows/openweather_airpollution_nodejs_image.yaml
@@ -7,6 +7,7 @@ on:
       - "etl_pipelines_nodejs/openweather_airquality_nodejs/*"
       - "etl_pipelines_nodejs/openweather_airquality_nodejs/src/*"
       - "etl_pipelines_nodejs/openweather_airquality_nodejs/utils/*"
+      - "etl_pipelines_nodejs/common/*"
 
 jobs:
   docker:
@@ -26,7 +27,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./etl_pipelines_nodejs/openweather_airquality_nodejs/
+          context: ./etl_pipelines_nodejs/
           file: ./etl_pipelines_nodejs/openweather_airquality_nodejs/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
