--- a/etl_pipelines_nodejs/openweather_airquality_nodejs/tsconfig.json
+++ b/etl_pipelines_nodejs/openweather_airquality_nodejs/tsconfig.json
@@ -16,5 +16,10 @@
     "composite": true,
     "declarationMap": true,
     "lib": ["es2022"]
-  }
+  },
+  "references": [
+    {
+      "path": "../common"
+    }
+  ]
 }
