Updated Dockerfile for shared libraries

--- a/etl_pipelines_nodejs/openweather_current_ts/Dockerfile
+++ b/etl_pipelines_nodejs/openweather_current_ts/Dockerfile
@@ -2,15 +2,16 @@ FROM node:18-alpine3.18
 
 WORKDIR /app
 
-COPY package*.json ./
-COPY tsconfig.json ./
+COPY ./openweather_current_ts/package*.json ./
+COPY ./openweather_current_ts/tsconfig.json ./
 
 RUN npm ci
 
+COPY ./openweather_current_ts ./openweather_current_ts
+COPY ./openweather_current_ts/utils ./openweather_current_ts/utils
+COPY ./openweather_current_ts/src ./openweather_current_ts/src
+COPY ./common ./common 
 
-COPY ./utils ./utils
-COPY ./src ./src
+RUN npx tsc ./openweather_current_ts/src/src/index.ts
 
-RUN npx tsc ./src/index.ts
-
-CMD [ "node", "src/index.js" ]
+CMD [ "node", "/app/openweather_current_ts/src/index.js" ]
