Updated to use shared/common Node.js ETL libraries

--- a/.github/workflows/openweather_current_node_ts_image.yaml
+++ b/.github/workflows/openweather_current_node_ts_image.yaml
@@ -7,6 +7,7 @@ on:
       - "etl_pipelines_nodejs/openweather_current_ts/*"
       - "etl_pipelines_nodejs/openweather_current_ts/src/*"
       - "etl_pipelines_nodejs/openweather_current_ts/utils/*"
+      - "etl_pipelines_nodejs/common/*"
 
 jobs:
   docker:
@@ -26,7 +27,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./etl_pipelines_nodejs/openweather_current_ts/
+          context: ./etl_pipelines_nodejs/
           file: ./etl_pipelines_nodejs/openweather_current_ts/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
